--- a/main.css
+++ b/main.css
@@ -10,31 +10,38 @@
     background-image: url("/img/background.png");
     background-size: auto;
   }
+
+  .backbar{
+  width: 100px; /* ajusta el ancho según lo necesites */
+  height: 4px; /* ajusta el grosor según lo necesites */
+  background-color: #000; /* color de la barra */
+  margin: auto;
+  }
   
   .titulos_w {
-    font-size: 70px;
+    font-size: 100px;
     font-family: "Ruslan Display", sans-serif;
-    font-weight: 400;
+    font-weight: 600;
     font-style: bold;
     color: white;
     text-align: center;
     position: relative;
     margin: -15px;
-    width: 350px;
-    line-height: 50px; 
+    width: 450px;
+    line-height: 70px; 
     text-shadow: 2px 2px 4px black;
   }
   
   
   .titulos_b {
-    font-size: 70px;
+    font-size: 80px;
     font-family: "Ruslan Display", sans-serif;
     font-weight: 400;
     font-style: bold;
     color: black;
     text-align: left;
-    width: 350px;
-    line-height: 50px; 
+    width: 450px;
+    line-height: 70px; 
       }
   
   /* navbar */
@@ -50,13 +57,28 @@
     color: black;
     padding-right: 3.5rem;
   }
-  
+
+
   .navbar-menu li a.active {
     color: black;
     font-size: 21px;
     font-weight: 1000;
-    text-decoration: underline;
-  }
+    text-decoration: none; 
+    position: relative;
+}
+
+.navbar-menu li a.active:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px; 
+    border-radius: 10px;
+    background-color: black; 
+    position: absolute;
+    bottom: -10px; 
+    left: 0; 
+}
+
   
   .btn-login {
     font-weight: normal;
@@ -90,142 +112,774 @@
     align-items: center;
     background-color: black;
     height: 500px;
-    
   }
   
-  
-  .p_presentacion{
-    color: rgb(255, 167, 167);
-    text-align: center;
-    width: 360px;
-    margin: 40px 0px 40px 0px;
-  }
-  
-  
-  .p_presentacion2{
-    text-align: right;
-    font-weight: 600;
-    color: rgb(255, 255, 255);
-    width: 25rem;
-  
-  }
-  
-  
-  .order_food{
+  .order_food {
+    position: relative; /* Establecer el contenedor como posición relativa */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 80px 40px 40px 40px;
+    margin: 80px 40px 30px 40px;
     gap: 40rem;
   }
   
-  .order_gradient {
-    color: white;
-      background-image: linear-gradient(to right, #ff00c8, #ffbcbc);
-      border-radius: 5px;
-      width: 200px; 
-      height: 50px; 
+  .presentacion_image {
+    position: absolute; /* Posicionamiento absoluto */
+    top: -300px; /* Ajustar según tu necesidad */
+    left: -50px; /* Ajustar según tu necesidad */
+    width: 200px; /* Ajustar según tu necesidad */
+    height: 200px; /* Ajustar según tu necesidad */
   }
+
+  .presentacion_image2 {
+    position: absolute; /* Posicionamiento absoluto */
+    top: -280px; /* Ajustar según tu necesidad */
+    left: 70rem; /* Ajustar según tu necesidad */
+    width: 100px; /* Ajustar según tu necesidad */
+    height: 250px; /* Ajustar según tu necesidad */
+  }
+  
+  .p_presentacion {
+    color: rgb(255, 167, 174);
+    text-align: center;
+    width: 379px;
+    margin: 40px 0px 40px 0px;
+  }
+  
+  .p_presentacion2 {
+    text-align: right;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    width: 25rem;
+  }
+  
+  .p_presentacion3 {
+    text-align: right;
+    font-weight: lighter;
+    color: rgb(255, 255, 255);
+    width: 25rem;
+  }
+  
+  .btn_order {
+    background-image: linear-gradient(to right, #ff00c8, #ff9191);
+    border-radius: 5px;
+    width: 200px;
+    height: 50px;
+    color: white;
+    font-size: 20px;
+    font-weight: 900;
+    border: none;
+  }
+  
+
+
+
   
   /* galeria */
   
-  .galeria_container{
-    margin: 250px 20px 20px 90px;
+  .galeria_container {
+    position: relative;
+    margin: 250px 20px 80px 90px;
+}
+
+.galeria_image {
+  position: absolute; /* Posicionamiento absoluto */
+  top: -100px; /* Ajustar según tu necesidad */
+  left: -10px; /* Ajustar según tu necesidad */
+  width: 190px; /* Ajustar según tu necesidad */
+  height: 90px; /* Ajustar según tu necesidad */
+}
+
+.p_galeria {
+    width: 380px;
+    margin-bottom: 15px;
+    font-size: 19px;
+    font-weight: 400;
+}
+
+.p_galeria2 {
+  width: 380px;
+  margin-bottom: 30px;
+  font-size: 19px;
+  font-weight: 400;
+}
+.btn-arrowizq_galeria {
+  padding: 5px 10px 5px 10px;
+  border-radius: 5px;
+  border: 3px solid #ff00c8;
+  background-color: transparent;
+  color: #ff00c8;
+  cursor: pointer;
+}
+
+.btn-arrowder_galeria {
+  padding: 5px 10px 5px 10px;
+  border-radius: 5px;
+  border: 3px solid #ff00c8;
+  background-color: #ff00c8;
+  color: white;
+  cursor: pointer;
+}
+
+/* Estilos para el icono */
+.btn-arrowizq_galeria i,
+.btn-arrowder_galeria i {
+  font-size: 20px;
+}
+
+
+
+
+
+.sushi_galeria1 {
+  position: absolute;
+  top: -100px;
+  right: -20px; 
+}
+
+.sushi_galeria1 img {
+  width: 250px;
+  height: 460px;
+  margin-right: 20px; 
+}
+
+.sushi_galeria1 img[src='/IMGS/GALERA3.png'] {
+  margin-right: 0; 
+}
+
+.sushi_background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1; 
+  transform: translateX(10px); 
+}
+
+.sushi_background img {
+  width: 250px;
+  height: 460px;
+}
+
+  
+/* precios */
+
+.platter_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; 
+  align-items: center; 
+  margin-top: 250px; 
+}
+
+
+.img_platter {
+  margin-right: 10px; 
+}
+
+.image_container {
+  position: relative; 
+}
+
+.image_container img:first-child {
+  position: relative; 
+  z-index: 1; 
+}
+
+.image_container img:last-child {
+  position: absolute; 
+  top: 25px; 
+  left: 20px; 
+  z-index: -1; 
+}
+
+.p_platter {
+  text-align: left;
+  margin-left: 50px;
+  font-size: 35px;
+}
+
+
+.platter_container2 {
+  display: flex;
+  flex-direction: row-reverse; /* Invierte la dirección de los elementos */
+  justify-content: space-between; /* Distribuye los elementos a los extremos */
+  align-items: center;
+  margin-top: 60px;
+}
+
+.image_container {
+  position: relative;
+}
+
+.img_platter2 {
+  transform: translateX(-80px); /* Mueve la imagen 10px hacia la derecha */
+}
+
+
+.image_container img:first-child {
+  position: relative;
+  z-index: 1;
+}
+
+.image_container img:last-child {
+  position: absolute;
+  top: 25px;
+  left: 20px;
+  z-index: -1;
+}
+
+.p_platter2 {
+  text-align: left;
+  margin-left: 300px;
+  font-weight: bold;
+  font-size: 35px;
+}
+
+.t_platter{
+  font-size: 35px;
+    font-family: "Ruslan Display", sans-serif;
+    color: black;
+    text-align: left;
+    width: 400px;
+    line-height: 30px; 
+}
+
+.precio{
+text-align: right;
+font-family: "Ruslan Display", sans-serif;
+font-size: 90px;
+color: #ff00c8;
+
+}
+
+.precio2{
+text-align: right;
+font-family: "Ruslan Display", sans-serif;
+font-size: 90px;
+color: #ff00c8;
+
+}
+
+
+/* Leer mas */
+
+.container_leermas {
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: black;
+  height: 1200px;
+  clip-path: polygon(0 0, 100% 0, 220% 90%, 0 100%);
+  position: relative; /* Añadir posición relativa */
+}
+
+
+.T_LEERMAS {
+  font-size: 45px;
+  font-family: "Ruslan Display", sans-serif;
+  font-weight: 600;
+  font-style: bold;
+  color: white;
+  text-align: center;
+  position: relative;
+  margin: 250px 0px 30px 0px;
+  width: 465px;
+  line-height: 40px; 
+}
+
+.leer_image {
+  position: absolute; /* Posicionamiento absoluto */
+  top: -100px; /* Ajustar según tu necesidad */
+  left: -10px; /* Ajustar según tu necesidad */
+  width: 190px; /* Ajustar según tu necesidad */
+  height: 90px; /* Ajustar según tu necesidad */
+}
+
+
+
+.p_leermas{
+  color: rgb(255, 167, 174);
+  text-align: center;
+  width: 550px;
+  margin: 0px 0px 40px 0px;
+}
+
+
+.p_leer{
+  text-align: right;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  position: absolute;
+  margin-top: 80px;
+  left: 100px;
+}
+
+.p_leer2{
+  text-align: left;
+  font-weight: lighter;
+  color: rgb(255, 167, 174);
+  position: absolute;
+  left: 0;
+  width: 290px;
+}
+
+.btn_learnmore{
+  background-image: linear-gradient(to right, #ff00c8, #ff9191);
+  border-radius: 5px;
+  width: 200px; 
+  height: 50px; 
+  color: white;
+  font-size: 20px;
+  font-weight: 900;
+  border: none
+  
+}
+
+.T2_LEERMAS {
+  font-size: 100px;
+  font-family: "Ruslan Display", sans-serif;
+  color: rgb(255, 255, 255);
+  text-align: left;
+  width: 100px;
+  line-height: 60px;
+  margin-top: 400px;
+  margin-right: 700px; 
+}
+
+.p_leermas3 {
+  text-align: left;
+  margin-left: 350px; /* Mover el elemento a la derecha */
+  margin-top: -140px; /* Subir el elemento */
+  font-size: 35px;
+  width: 400px;
+  color: rgb(255, 167, 174);
+}
+
+
+  /* cards */
+  .cards-container {
+    display: flex;
+    justify-content: center;
   }
   
-  .p_galeria{
-    width: 290px;
-    margin-bottom: 10px;
+  .cards {
+    position: relative;
+    width: 350px;
+    margin: 0 10px; /* Leve separación entre tarjetas */
+    text-align: center;
+    padding: 20px;
   }
   
+  .image_card {
+    width: 100%;
+    border-radius: 8px;
+  }
   
-  .btn-arrowizq_galeria {
-    padding: 8px 8px 2px 10px;
+  .fondo_card {
+    position: absolute;
+    top: 45px;
+    left: 25px;
+    object-fit: cover;
+    z-index: -1;
+  }
+  
+  .SUB_CARDS {
+    font-size: 20px;
+    text-align: left;
+    margin-top: 40px;
+    font-weight: 900;
+  }
+  
+  .P_CARDS {
+    text-align: left;
+    font-weight: 500;
+  }
+
+/* PROMO */
+  .promo_img {
+    position: absolute; /* Posicionamiento absoluto */
+    height: 150px;
+    max-width: 250px;
+    right: 1145px;
+  }
+
+
+.promo_section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container_promo {
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: black;
+  height: 800px;
+  width: 900px; /* Cambié a un ancho relativo para que se ajuste al tamaño del contenedor */
+}
+
+.promo_content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  max-width: 379px;
+  margin-top: 250px; /* Bajar a la mitad del contenedor promo */
+}
+
+.T_promo {
+  font-size: 85px;
+  font-family: "Ruslan Display", sans-serif;
+  color: rgb(255, 255, 255);
+  text-align: left;
+  line-height: 50px;
+}
+
+.p_promo {
+  color: rgb(255, 167, 174);
+  text-align: left;
+  margin: 10px 0px 35px 0px;
+  width: 300px;
+}
+
+.btn_order {
+  background-image: linear-gradient(to right, #ff00c8, #ff9191);
+  border-radius: 5px;
+  width: 200px; 
+  height: 50px; 
+  color: white;
+  font-size: 20px;
+  font-weight: 900;
+  border: none;
+  align-self: flex-start;
+}
+
+.promo_images {
+  position: relative;
+  width: 50%; /* Cambié a un ancho relativo para que se ajuste al tamaño del contenedor */
+  margin: 100px 50px 0px 180px;
+}
+
+.T_promo2 {
+  font-size: 85px;
+  line-height: 50px;
+  font-family: "Ruslan Display", sans-serif;
+  color: #000000;
+  text-align: center;
+  position: absolute;
+  top: 0px;
+  left: -40px;
+  z-index: 1; /* Asegura que el título esté encima de las imágenes */
+  background-color: #ff00c8
+}
+
+.promo_img3 {
+  width: 400px; /* Cambié el tamaño de la imagen a 100% para que se ajuste al tamaño del contenedor */
+  z-index: 0; /* Asegura que las imágenes estén detrás del título */
+}
+
+.promo_img_back {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  z-index: -1; /* Coloca la segunda imagen detrás de la primera */
+}
+
+  /* comentarios */
+
+  .comentarios_container {
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    position: relative; /* Añadimos posición relativa */
+  }
+  
+  .card_comentarios {
+    align-items: center;
+    text-align: center; 
+    max-width: 600px; 
+    margin: 0 auto; 
+  }
+  
+  .imagen_container {
+    position: relative;
+  }
+  
+  .imagen_container::before {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: 240px;
+    width: 120px;
+    height: 120px;
+    background-color: #ff00c8;
+    border-radius: 50%;
+    z-index: -1;
+  }
+  
+  .imagenes_comentarios {
+    width: 100px;
+    border-radius: 50%;
+    z-index: 1;
+  }
+  
+  .SUB_COMENTARIO {
+    font-size: 30px;
+    font-family: "Ruslan Display", sans-serif;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    margin-top: 40px;
+  }
+  
+  .P_COMENTARIO {
+    margin: 5px 0;
+  }
+  
+  .P_COMENTARIO2 {
+    margin: 10px 0;
+  }
+  
+  .stars {
+    unicode-bidi: bidi-override;
+    color: #000000;
+    font-size: 20px; 
+    margin-top: 10px;
+  }
+  
+  .stars > span {
+    margin-bottom: 30px;
+    display: inline-block;
+    position: relative;
+    width: 2em; 
+    font-size: 30px; 
+  }
+  
+  .stars > span:hover:before,
+  .stars > span:hover ~ span:before {
+    content: "\2605";
+    position: absolute;
+    color: #ffca08;
+  }
+  
+  .arrowizq_comentarios {
+    padding: 5px 10px 5px 10px;
     border-radius: 5px;
-    border: solid #ff00c8;
-    background-color: transparent;
     border: 3px solid #ff00c8;
+    background-color: transparent;
     color: #ff00c8;
     cursor: pointer;
   }
   
-  .btn-arrowder_galeria {
-    padding: 8px 8px 2px 10px;
+  .arrowder_comentarios {
+    padding: 5px 10px 5px 10px;
     border-radius: 5px;
-    border: solid #ff00c8;
+    border: 3px solid #ff00c8;
     background-color: #ff00c8;
     color: white;
     cursor: pointer;
   }
   
-  .sushi_galeria1{}
-  
-  
-  
-  /* cards */
-  
-  .contenedor_card {
-    display: flex;
-    gap: 3rem;
-    padding-top: 90px;
-    padding-bottom: 90px;
-    justify-content: center;
+  .arrowizq_comentarios i,
+  .arrowder_comentarios i {
+    font-size: 20px;
   }
   
-  h2 {
-    color: #fff;
+  /* Estilos para las imágenes adicionales */
+  .izquierda_arriba {
+    position: absolute;
+    bottom: -100px;
+    left: 30px;
   }
   
-  .card {
-    display: flex;
-    width: 400px;
-    padding: 0px;
-    flex-direction: column;
-    align-items: left;
-    border-radius: 50px;
-    border: none !important;
+  .imagen_arriba {
+    width: 200px;
+    height: 80px;
   }
   
-  .card__title {
-    text-align: left;
-    font-size: 18px;
-    font-weight: bold;
+  .izquierda_abajo {
+    position: absolute;
+    left: 1050px;
+    top: -50px;
   }
   
-  .card__text {
-    text-align: left;
+  .imagen_abajo {
+    width: 200px;
+    height: 80px;
   }
+  
+
   
   /* correo */
+
+  .correo_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin-top: 50px;
+  }
+
+  .T_CORREO{
+    font-size: 40px;
+    font-family: "Ruslan Display", sans-serif;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    margin-top: 40px;
+  }
   
-      .form_centrado {
-        display: flex;
-        justify-content: center;
-      }
+  .P_correo{
+    width: 500px;
+    text-align: center;
+  }
+
+  .P_correo2{
+    text-align: center;
+  }
+
+  .form_correo {
+    border-radius: 10px;
+    border: 4px solid #ff00c8;
+    padding-bottom: 11px;
+    padding-top: 2px;
+    padding-left: 15px;
+    font-size: 24px;
+    font-weight: 600;
+  }
   
-      .form_correo {
-        border-radius: 5px;
-        border: 2px solid #ff00c8; 
-        padding: 4px 25px; 
-        font-size: 16px; 
-      }
+  .form_correo input[type="text"] {
+    padding: 10px;
+    border: 2px solid #ff00c8;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 600;
+  }
   
-      .form_correo::placeholder {
-        display: flex;
-        margin-left: auto;
-        color: #ff00c8; 
-        font-size: 14px; 
-      }
+  .form_correo input[type="submit"] {
+    border: 4px solid #ff00c8;
+    border-radius: 10px;
+    background-color: #ff00c8;
+    color: white;
+    font-size: 14px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
   
-      .btn-arrow_c {
-        padding: 8px 8px 0 10px;
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
-        border: solid #ff00c8;
-        background-color: #ff00c8;
-        color: white;
-        cursor: pointer;
-      }
+  .form_correo::placeholder {
+    color: #ff00c8;
+    font-size: 14px;
+
+  }
+  
+  .btn-arrow_c {
+    padding: 10px 13px; /* Eliminado el padding extra */
+    border-radius: 5px;
+    border: 2px solid #ff00c8;
+    background-color: #ff00c8;
+    color: white;
+    cursor: pointer;
+    text-align: left; /* Alineación del texto a la izquierda */
+  }
+
+  /* Estilos para el icono */
+
+.btn-arrow_c i {
+  font-size: 22px;
+  align-items: center;
+}
   
       
   /* footer */
+  .container_footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: black;
+    height: 1000px;
+    clip-path: polygon(0 100%, 200% 200%, 220% 0%, 0% 15%);
+    position: relative;
+  }
+  
+  .p_correo {
+    text-align: right;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    position: absolute;
+    top: 250px;
+    right: 60px;
+  }
+  
+  .p_correo2 {
+    text-align: left;
+    font-weight: lighter;
+    color: rgb(255, 255, 255);
+  }
+  
+  .T_footer {
+    font-size: 60px;
+    font-family: "Ruslan Display", sans-serif;
+    color: rgb(255, 255, 255);
+    text-align: left;
+    line-height: 60px;
+    margin-bottom: 20px; /* Agregar margen inferior para separar del contenido siguiente */
+  }
+  
+  .bottom_content {
+    display: flex;
+    flex-direction: row; /* Cambio a dirección de fila */
+    align-items: flex-start; /* Alinear elementos a la izquierda */
+    justify-content: flex-start; /* Alinear elementos a la izquierda */
+    padding: 20px;
+    position: relative;
+    margin-top: 600px; /* Ajuste de margen superior */
+    width: 1200px;
+  }
+  
+  .lists_wrapper {
+    display: flex;
+    flex-direction: row; /* Alinear las listas horizontalmente */
+  }
+  
+  .lists {
+    display: flex;
+    flex-direction: column; /* Alinear las listas verticalmente */
+    margin-right: 20px; /* Agregar margen a la derecha para separar las listas */
+  }
+  
+  .images {
+    display: flex;
+    flex-direction: column; /* Alinear las imágenes verticalmente */
+    justify-content: flex-start; /* Alinear las imágenes a la parte superior */
+    align-items: flex-start; /* Alinear las imágenes a la izquierda */
+  }
+  
+  .ul_footer,
+  .ul_footer2 {
+    color: white;
+    list-style: none;
+    margin-left: 35px;
+  }
+  
+  .sub_footer {
+    color: white;
+    font-weight: 900;
+    list-style: none;
+    margin-bottom: 10px;
+  }
+  
+  .imagen_footer {
+    max-width: 100%;
+    height: 50px;
+  }
+  
+  
+  
+  
+  
+  
+
+
